# moja-game

./: .buildconfig  .gitignore  CMakeLists.txt  MoJaGame.cbp  MoJaGame.layout  README.md  common.make  linux.make  mac.make  main.cpp  makefile
assets/: cube_quads.mtl
include/: Mojagame.h
include/Mojagame/: App.h  Component.h  Entity.h  Events.h  Factory.h  Grapevine.h  InputMap.h  PreCompiledHeaders.hpp  Renderer.h  Scene.h  Sprite.h  Types.h
include/Mojagame/assets/: MeshLoader.h
include/Mojagame/component/: Component.h  EventDispatcher.h  QuadRenderer.h  Transform.h
include/Mojagame/component/renderable/: Image.h  Quad.h  Renderable.h
include/Mojagame/component/renderer/: QuadComponent.h  QuadRenderer.h  RenderComponent.h  Renderer.h
include/Mojagame/display/: Quad.h  Sprite.h
include/Mojagame/events/: Event.h  EventDispatcher.h  IEventListener.h
include/Mojagame/math/: Matrix.h  Vector.h
include/Mojagame/native/: GLFW.h  Input.h  Platform.h  RenderContext.h
include/Mojagame/native/platform/: GLFWPlatform.h
include/Mojagame/native/renderer/: GLRenderContext.h  GLRenderer.h  GLRendererContext.h  RenderContext.h
include/Mojagame/renderer/: RenderContext.h  Shader.h  Texture.h
include/Mojagame/util/: Bundle.h  Colour.h  Container.h
src/: App.cpp  Component.cpp  Entity.cpp  Events.cpp  Factory.cpp  Grapevine.cpp  InputMap.cpp  Main.cpp  Renderer.cpp  Scene.cpp  Sprite.cpp
src/assets/: MeshLoader.cpp
src/component/: Component.cpp  EventDispatcher.cpp  QuadRenderer.cpp  Transform.cpp
src/component/renderable/: Image.cpp  Quad.cpp  Renderable.cpp
src/component/renderer/: QuadComponent.cpp  QuadRenderer.cpp  RenderComponent.cpp  Renderer.cpp
src/display/: Quad.cpp  Sprite.cpp
src/math/: Matrix.cpp  Vector.cpp
src/native/platform/: GLFWPlatform.cpp
src/native/renderer/: GLRenderContext.cpp
src/renderer/: RenderContext.cpp  Shader.cpp  Texture.cpp
src/util/: Colour.cpp
test/: Main.cpp
test/SimpleImage/: Main.cpp
test/SimpleInput/: Main.cpp
